--- a/DangKy.html
+++ b/DangKy.html
@@ -75,7 +75,7 @@
         <nav>
             <ul>
                 <li class="LG">
-                    <a href="index.html"><img src="logo.jpg" width="120px" height="80px"></a>
+                    <a href="index.html"><img src="Logo.jpg" width="120px" height="80px"></a>
 
                 </li>
                 <li><a href="./index.html">Trang Chủ</a></li>
